--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.1",
+    "apollo-server-express": "^2.25.2",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
+    "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
